--- a/deep-learning.html
+++ b/deep-learning.html
@@ -268,7 +268,7 @@ Full-Time. Apply for this job. Hayden AI is an emerging artificial intelligence?
 Autonomous Vehicles. If you're a creative and autonomous computer scientist 
 with a?...</p>
 <hr/>
-<h5><a href='https://jobs.crelate.com/portal/cardinalhire/job/33joizypm53wyo7czhtqqsfhua'>Artificial Intelligence and Deep Learning Research Scientist (Ph.D. Candidates!) | CardinalHire</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/cardinalhire/job/33joizypm53wyo7czhtqqsfhua'>Artificial Intelligence and Deep Learning Research Scientist (Ph.D. Candidates!) | CardinalHire</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-09-27</p>
 <hr/>
@@ -398,7 +398,7 @@ Clara, More... Software Intern, Math Libraries - CUDA | US, CA, Santa Clara.</p>
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-09-07</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/cardinalhire/cf15bd50-20e2-4c24-b490-521f1a8ceae9'>Stealth Startup - Deep Learning Research Scientist - up to $600,000 + up to 10% Equity</a></h5> 
+<h5><a href='https://jobs.lever.co/cardinalhire/cf15bd50-20e2-4c24-b490-521f1a8ceae9'>Stealth Startup - Deep Learning Research Scientist - up to $600,000 + up to 10% Equity</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-09-07</p>
 <hr/>
@@ -414,7 +414,7 @@ Clara, More... Software Intern, Math Libraries - CUDA | US, CA, Santa Clara.</p>
 <p><span class="badge badge-light">London, England, United Kingdom</span></p>
 <p>Posted on: 2019-09-06</p>
 <hr/>
-<h5><a href='https://crisalix.workable.com/j/EEC665F01E'>Crisalix - Jobs: Deep Learning Engineer with Strong iOS Development Skills - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://crisalix.workable.com/j/EEC665F01E'>Crisalix - Jobs: Deep Learning Engineer with Strong iOS Development Skills - Apply online</a></h5> 
 <p><span class="badge badge-light">Kharkiv Oblast, Ukraine</span></p>
 <p>Posted on: 2019-09-06</p>
 <hr/>
@@ -492,7 +492,7 @@ Compute Performance Developer Technology Intern - CUDA | Canada, Toronto.</p>
 <p>Aug 7, 2019 ... We are now looking for a Research Scientist Intern ? Deep Learning. NVIDIA is 
 searching for a world-class researcher to join our research team. We are?...</p>
 <hr/>
-<h5><a href='https://nvidia.wd5.myworkdayjobs.com/en-US/UniversityJobs/job/Canada-Toronto/Deep-Learning-Intern--Content---Technology---Summer-2020_JR1923764'>Deep Learning Intern, Content & Technology - Summer 2020</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://nvidia.wd5.myworkdayjobs.com/en-US/UniversityJobs/job/Canada-Toronto/Deep-Learning-Intern--Content---Technology---Summer-2020_JR1923764'>Deep Learning Intern, Content & Technology - Summer 2020</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Aug 8, 2019 ... Research Scientist Intern - Deep Learning | Canada, Toronto ? Compute 
 Performance Developer Technology Intern - CUDA | Canada, Toronto ? Software 
@@ -502,7 +502,7 @@ QA?...</p>
 <p><span class="badge badge-light">St. Louis, Missouri  Chicago, Illinois  Seattle, Washington</span></p>
 <p>Posted on: 2019-08-14</p>
 <hr/>
-<h5><a href='https://affectiva.applytojob.com/apply/9AfNZsgd6Y/Deep-Learning-Intern'>Deep Learning Intern - Affectiva - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://affectiva.applytojob.com/apply/9AfNZsgd6Y/Deep-Learning-Intern'>Deep Learning Intern - Affectiva - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Aug 7, 2019 ... We are a group of individuals with backgrounds in machine learning, computer 
 vision, speech processing and affective computing. We are interested in hiring a
